<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Fam Gram</string>
    <string name="action_settings">Settings</string>
    <string name="home_view_action_settings">Log Out</string>

    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="hello_world">Hello World!</string>

    <string name="userLoginEditText">USERNAME</string>
    <string name="userPasswordEditText">PASSWORD</string>
    <string name="singInButtonBG">Sing in</string>
    <string name="accountCheckTextView">Don’t have an account? </string>
    <string name="signUpTextView">Sign up</string>

    <string name="signupUserNameEditText">USERNAME</string>
    <string name="signupPasswordEditText">PASSWORD</string>
    <string name="signupEmailEditText">EMAIL</string>
    <string name="signupPhoneNumberEditText">PHONE NUMBER</string>
    <string name="singupButtonText">Sign up</string>
    <string name="loginCheckTextView">Already have an account? </string>
    <string name="logInTextView">Log in</string>

    <string name="logOutImageButtonDescription">Log Out Buttom</string>

    <string name="forgetPasswordTextView">Forgot password? </string>
    <string name="passwordResetTextView">Please enter your email to reset you password.</string>
    <string name="passwordResetEmailEditText">Email</string>
    <string name="passwordResetButton">Email Password</string>
    <string name="cancelPasswordResetTextView">Never mind, I don\'t need a reset. </string>
    <string name="returnToLoginTextView">Log in</string>
    <string name="title_activity_home_view">Home View</string>


</resources>
