<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tricloudcommunications.ce.famgram.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/login_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signInLayout"
        android:visibility="invisible">

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="257dp"
            android:id="@+id/loginUserNameEditText"
            android:background="@drawable/username_login"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/userLoginEditText"
            android:textColorHint="#FFFFFF"
            android:layout_height="60dp" />

        <EditText
            android:layout_width="match_parent"
            android:ems="10"
            android:id="@+id/loginPasswordEditText"
            android:layout_marginTop="21dp"
            android:background="@drawable/password_login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:hint="@string/userPasswordEditText"
            android:textSize="24sp"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:layout_height="60dp"
            android:layout_below="@+id/loginUserNameEditText"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/singInButtonBG"
            android:layout_marginBottom="89dp"
            android:id="@+id/logInButton"
            android:layout_height="70dp"
            android:background="@drawable/signin_button_bg"
            android:layout_width="220dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:onClick="userSignIn"
            android:layout_above="@+id/signInLayoutTextView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/accountCheckTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accountCheckTextView"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/signInLayoutTextView" />

        <TextView
            android:text="@string/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="108dp"
            android:id="@+id/signInLayoutTextView"
            android:textSize="25sp"
            android:textColor="@color/fam_gram_signup"
            android:layout_alignBaseline="@+id/accountCheckTextView"
            android:layout_alignBottom="@+id/accountCheckTextView"
            android:layout_alignParentEnd="true"
            android:onClick="signUpNow" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signUpLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible">

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signupUserNameEditText"
            android:background="@drawable/username_login"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:hint="@string/userLoginEditText"
            android:textColorHint="#FFFFFF"
            android:layout_height="60dp"
            android:layout_marginTop="215dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:ems="10"
            android:id="@+id/signupPasswordEditText"
            android:layout_marginTop="17dp"
            android:background="@drawable/password_login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:hint="@string/signupPasswordEditText"
            android:textSize="24sp"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:layout_height="60dp"
            android:layout_below="@+id/signupUserNameEditText"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signupEmailEditText"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/signupEmailEditText"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginTop="371dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="phone"
            android:ems="10"
            android:layout_marginTop="110dp"
            android:id="@+id/signupPhoneNumberEditText"
            android:hint="@string/signupPhoneNumberEditText"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="#FFFFFF"
            android:background="@drawable/edit_text_bg"
            android:layout_below="@+id/signupPasswordEditText"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_marginBottom="89dp"
            android:id="@+id/signUpButton"
            android:layout_height="70dp"
            android:background="@drawable/signin_button_bg"
            android:layout_width="220dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:onClick="userSignUp"
            android:layout_above="@+id/logInTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/singupButtonText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginCheckTextView"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/logInTextView"
            android:text="@string/loginCheckTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="108dp"
            android:id="@+id/logInTextView"
            android:textSize="25sp"
            android:textColor="@color/fam_gram_signup"
            android:layout_alignBottom="@+id/loginCheckTextView"
            android:layout_alignParentEnd="true"
            android:text="@string/logInTextView"
            android:layout_alignTop="@+id/loginCheckTextView"
            android:onClick="logInNow" />

    </RelativeLayout>


</RelativeLayout>
